Implementing Wav-Controller
